[package]
name = "stokast"
version = "0.1.0"
authors = ["Martin Algesten <martin@algesten.se>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
embedded-hal = "0.2"
teensy4-panic = "0.2"
teensy4-bsp = { version = "0.2", features = ["rt"] }
alg = { version = "*", path = "../alg" }