[package]
name = "stokast"
version = "0.1.0"
authors = ["Martin Algesten <martin@algesten.se>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
embedded-hal = "0.2"
arrayvec = { version = "0.7", default-features = false }
teensy4-bsp = { version = "0.2", features = ["rt"] }
imxrt-hal = "*" # this is controlled by teensy4-bsp version
imxrt-ral = "*" # this is controlled by teensy4-bsp version
log = "0.4"

alg = { version = "*", path = "../alg" }
